Se agregó mensaje de error y de terminado el juego

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<p class="_titleInicio">QUIZ</h1>
 	<h3 class="_subtitle">Mapa de México</h3>
-	<a class="_btnIniciar" href="./game.html">INICIAR</a>
+	<a class="btn _btnIniciar" href="./game.html">INICIAR</a>
 
 	<script src="./scripts.js"></script>
 </body>
